@@ -2,29 +2,6 @@ import sys
 from setuptools import setup
 from setuptools.command.test import test as TestCommand
 
-long_description = """
-What is Tox?
-==========================
-
-Tox as is a generic virtualenv management and test command line tool you can
-use for:
-
-* checking your package installs correctly with different
-  Python versions and interpreters
-
-* running your tests in each of the
-  environments, configuring your test tool of choice
-
-* acting as a frontend to Continuous Integration
-  servers, greatly reducing boilerplate and merging
-  CI and shell-based testing.
-
-For more information, docs and many examples please checkout the `home page`_:
-
-    http://tox.testrun.org/
-
-.. _`home page`: http://tox.testrun.org/
-"""
 
 
 class Tox(TestCommand):
@@ -47,9 +24,9 @@ def main():
     setup(
         name='tox',
         description='virtualenv-based automation of test activities',
-        long_description=long_description,
+        long_description=open("README.rst").read(),
         url='http://tox.testrun.org/',
-        version='1.5.dev9',
+        version='1.5.dev11',
         license='http://opensource.org/licenses/MIT',
         platforms=['unix', 'linux', 'osx', 'cygwin', 'win32'],
         author='holger krekel',
